--- a/src/components/player-stats/player.css
+++ b/src/components/player-stats/player.css
@@ -1,11 +1,17 @@
 #player {
 	width: 330px;
 	margin: 0;
-	min-height: 105px;
 }
 .user {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 4rem;
+}
+.card-title {
+	text-align: center;
+}
+.hp-shield {
+	display: flex;
+	justify-content: space-between;
 }
