--- a/src/components/game-board/gameBoard.css
+++ b/src/components/game-board/gameBoard.css
@@ -19,3 +19,24 @@
 .margins {
 	margin: 20px;
 }
+
+.turns-info {
+	border: 1px solid rgba(0, 0, 0, 0.125);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	width: 220px;
+	height: 363px;
+	background-color: white;
+}
+.info-state {
+	margin: 15px;
+	border: 1px solid lightgrey;
+}
+
+.submit {
+	background-color: lightskyblue;
+	width: 60%;
+	margin: 0 auto;
+	border-radius: 20px;
+}
