--- a/src/components/game-board/gameBoard.css
+++ b/src/components/game-board/gameBoard.css
@@ -26,12 +26,13 @@
 	flex-direction: column;
 	justify-content: space-around;
 	width: 220px;
-	height: 363px;
 	background-color: white;
+	border-radius: 5px;
 }
 .info-state {
 	margin: 15px;
 	border: 1px solid lightgrey;
+	border-radius: 5px;
 }
 
 .submit {
@@ -40,4 +41,8 @@
 	margin: 0 auto;
 	border-radius: 20px;
 	padding: 10px;
+}
+
+.active {
+	background-color: tomato;
 }
